--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,11 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    background: url('/images/bg-light.svg');
+ 
+    background-position: top center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 a {
