--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,10 +7,36 @@ body {
  font-size: 16px;
  font-size: 18px ;
  line-height:32px ;
- color: #0a0c10
+ color: #0a0c10;
+  background: var(--color-bg-primary);
+  color: var(--color-text-primary);
+  font-family: sans-serif;
+  transition: background 0.25s ease-in-out;
     
 }
+body[data-theme="light"]{
 
+ --color-text-primary: #27201a;
+ --color-text-secondary: #1e90ff;
+ --color-bg-primary: #fff;
+ --color-bg-toggle: #1e90ff;
+ --color-bg-card:#BFFFF0;
+ --color-card-logo-color:#27281a;
+}
+
+body[data-theme="dark"] {
+  --color-text-primary: #e3e3e3;
+  --color-text-secondary: #ff6b00;
+  --color-bg-primary: #252525;
+  --color-bg-toggle: #a9a9a9;
+   --color-bg-card:#e3e3e3;
+   --color-card-logo-color:#27281a;
+  /* color:#ff6b00 */
+}
+/* 
+h2 {
+  color: var(--color-text-secondary);
+} */
 a {
   color: inherit;
   text-decoration: none;
@@ -29,3 +55,5 @@ a {
     background: black;
   }
 }
+
+
