--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,7 @@ body[data-theme="light"]{
   --color-text-tertiary: #374151;
  --color-text-form:#27201a;
  --color-bg-primary: #fff;
+ --color--bg-tertiary:#EFF6FF;
  --color-bg-toggle: #1e90ff;
  --color-bg-card:#BFFFF0;
  --color-card-logo-color:#27281a;
@@ -30,11 +31,13 @@ body[data-theme="dark"] {
   --color-text-primary: #e3e3e3;
   --color-text-secondary: #ff6b00;
    --color-text-form:#fff;
+     --color-text-tertiary:#EFF6FF;
   --color-bg-primary: #252525;
+   --color--bg-tertiary:#252524;
   --color-bg-toggle: #a9a9a9;
    --color-bg-card:#e3e3e3;
    --color-card-logo-color:#27281a;
-     --color-text-tertiary: #374151;
+ 
 
 
   /* color:#ff6b00 */
